feat: Installed react-dnd packages for enhanced drag-and-drop functionality
- Installed `react-dnd@^16.0.1` to provide the core drag-and-drop functionality within the React components.
- Added `react-dnd-html5-backend@^16.0.1` as the HTML5 backend to handle drag-and-drop via the HTML5 API.
- Integrated `react-dnd-multi-backend@^8.0.3` to allow for switching between different backends like touch and HTML5 based on the input method.
- Included `react-dnd-touch-backend@^16.0.1` to support touch devices and ensure the application is fully functional on mobile and tablet devices.

These libraries will enable versatile drag-and-drop capabilities across various devices and browsers, enhancing the interactive user experience of our application.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "LittleLingo",
+  "name": "little-lingo",
   "private": true,
   "version": "0.0.1",
   "type": "module",
@@ -28,6 +28,10 @@
     "@types/react-router-dom": "^5.3.3",
     "ionicons": "^7.0.0",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
+    "react-dnd-multi-backend": "^8.0.3",
+    "react-dnd-touch-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
