--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@typescript-eslint/parser": "^8.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-react-hooks": "^4.6.2",
+    "framer-motion": "^11.11.11",
     "ionicons": "^7.0.0",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
